# pulse

./: Cargo.toml  LICENSE  README.md
.agents/rules/: lumi-ops-root-agent.md
.github/workflows/: ci.yml  publish.yml
src/: dashboard.rs  disk_info.rs  grid_layout.rs  main.rs  metrics.rs  process_info.rs  session.rs  ssh_config.rs  system_info.rs
src/ui/: dashboard.rs  mod.rs
