[package]
name = "beebo"
version = "0.1.0"
edition = "2024"
description = "A TUI dashboard for monitoring and managing SSH hosts"
license = "MIT"
repository = "https://github.com/yyy110011/pulse"
keywords = ["ssh", "tui", "monitor", "dashboard", "terminal"]
categories = ["command-line-utilities"]
exclude = [".vscode/", ".lumi/", ".agents/"]

[dependencies]
color-eyre = "0.6.5"
ratatui = "0.30.0"
russh = "0.57.1"
russh-keys = "0.49.2"
russh-sftp = "2.1.1"
ssh-key = "0.6.7"
tokio = { version = "1.50.0", features = ["full"] }
vt100 = "0.16.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
whoami = "2.1.1"
